java 16 support and removed preview feature flags. pattern matching now only allows subtypes