@@ -13,7 +13,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.test.skip>true</maven.test.skip>
-		<maven.test.argLine>--enable-preview -javaagent:"${project.build.directory}/${project.build.finalName}.jar"</maven.test.argLine> <!-- jar must be present in order to run CallbacksTest -->
+		<maven.test.argLine>-javaagent:"${project.build.directory}/${project.build.finalName}.jar"</maven.test.argLine> <!-- jar must be present in order to run CallbacksTest -->
 	</properties>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -24,9 +24,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<release>15</release>
+					<release>16</release>
 					<compilerArgs>
-						<arg>--enable-preview</arg>
 						<arg>-Xlint:all,-preview</arg>
 					</compilerArgs>
 					<showWarnings>true</showWarnings>
